--- a/frontend/src/components/Layout.astro
+++ b/frontend/src/components/Layout.astro
@@ -21,6 +21,9 @@ const { title, description } = Astro.props;
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="msapplication-TileImage" content="/favicon.ico" />
     <meta name="msapplication-config" content="/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Seymour+One&display=swap" rel="stylesheet">
 
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
@@ -39,7 +42,7 @@ const { title, description } = Astro.props;
     -moz-osx-font-smoothing: grayscale;
   }
   body {
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+    font-family: "Roboto",-apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
     font-optical-sizing: auto;
     font-style: normal;
   }
