--- a/frontend/src/components/partials/viewer/Table.astro
+++ b/frontend/src/components/partials/viewer/Table.astro
@@ -78,7 +78,7 @@
       <tbody>
         <template x-for="(item, index) in results.result.lines" :key="index">
           <tr
-            class="border-b bg-gray-800 border-gray-900"
+            class="border-b bg-gray-800 border-gray-700 hover:bg-gray-900"
             :class="{'highlight': input.realtime == true && highlighter.line_from  > 0 && item.line_number-1 >= highlighter.line_from}"
           >
             <td class="px-3 py-2" x-text="item.line_number.toLocaleString()"
