--- a/frontend/src/components/partials/viewer/Table.astro
+++ b/frontend/src/components/partials/viewer/Table.astro
@@ -204,7 +204,7 @@
               <span class="uppercase" x-text="item.agent.device"></span>
             </td>
             <td><span class="text-sm" x-text="timeago(item.date)"></span></td>
-            <td class="px-3 py-2 text-blue-200" x-text="item.content"></td>
+            <td class="px-3 py-2 text-blue-200 whitespace-pre-wrap" x-text="formatLogString(item.content)"></td>
           </tr>
         </template>
       </tbody>
