ui: a few ui improvements

--- a/frontend/src/components/Viewer.astro
+++ b/frontend/src/components/Viewer.astro
@@ -28,7 +28,7 @@ import Alpine from "@components/Alpine.astro";
     query_file: "",
     ignore: "",
     file_path: "",
-    realtime: false,
+    realtime: true,
     reverse: true,
     host: "",
     type: "",
