feat: ui updated, more sleak

--- a/frontend/src/components/Footer.astro
+++ b/frontend/src/components/Footer.astro
@@ -5,7 +5,7 @@
 <!--Footer-->
 <div class="w-full pt-16 pb-6 text-sm fade-in flex items-center justify-center">
   <a class="text-gray-500 no-underline" href="#">&copy; 2023</a>
-  - GOL - Log Viewer by&nbsp;
+  <span class="text-gray-400">&nbsp;GOL - Log Viewer by&nbsp;</span>
   <a
     class="text-gray-500 no-underline"
     href="https://github.com/kevincobain2000">kevincobain2000</a
