--- a/frontend/src/components/Nav.astro
+++ b/frontend/src/components/Nav.astro
@@ -7,8 +7,8 @@ import octocat from '@assets/octocat.svg?raw'
     <div class="flex flex-col items-center space-y-4">
       <div class="flex items-center space-x-3">
         <img src="/favicon.ico" alt="GOL Logo" width="40" class="rounded-lg shadow-lg">
-        <h1 class="text-3xl font-bold bg-gradient-to-r from-blue-500 to-purple-600 bg-clip-text text-transparent">
-          GOL
+        <h1 class="text-3xl font-bold text-gray-300">
+          G o l
         </h1>
       </div>
     </div>
