--- a/frontend/src/components/partials/viewer/Table.astro
+++ b/frontend/src/components/partials/viewer/Table.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<div class="grid grid-cols-2 gap-4 mt-5">
+<div class="grid grid-cols-2 gap-4">
   <div class="text-left">
     <label class="inline-flex items-center cursor-pointer mt-4">
       <span class="mr-2 text-xs font-medium text-gray-400">Per page:</span>
@@ -17,10 +17,39 @@
         <option value="1000">1000</option>
       </select>
     </label>
+    <nav aria-label="Page navigation" class="inline-flex ml-4">
+      <ul class="inline-flex -space-x-px text-xs">
+        <li>
+          <button
+            :disabled="input.page === 1"
+            @click="input.page > 1 ? input.page-- : null; submit();"
+            class="flex items-center justify-center px-3 h-8 ms-0 leading-tight border-e-0 rounded-s-md bg-gray-800 border-gray-700 text-gray-300 hover:bg-gray-700 hover:text-white transition-colors duration-150"
+            :class="{'cursor-not-allowed opacity-50': input.page === 1}"
+            >Previous</button
+          >
+        </li>
+        <li>&nbsp;</li>
+        <li>
+          <button
+            type="button"
+            :disabled="input.page >= Math.ceil(results.result.total / input.per_page)"
+            @click="input.page++; submit();"
+            class="flex items-center justify-center px-3 h-8 leading-tight rounded-e-md bg-gray-800 border-gray-700 text-gray-300 hover:bg-gray-700 hover:text-white transition-colors duration-150"
+            :class="{'cursor-not-allowed opacity-50': input.page >= Math.ceil(results.result.total / input.per_page)}"
+            >Next</button
+          >
+        </li>
+      </ul>
+    </nav>
   </div>
-  <div class="text-right pt-5">
-    <span class="text-xs text-gray-400">
+  <div class="text-right pt-4">
+    <span class="text-xs text-gray-500">
       Updated at <span x-text="loading.updated_at"></span>
+    </span>
+    <span class="text-xs text-gray-400 ml-4">
+      Page <span x-text="input.page.toLocaleString()"></span> of <span
+        x-text="Math.ceil(results.result.total / input.per_page).toLocaleString()"
+      ></span> (<span x-text="results.result.total.toLocaleString()"></span> rows)
     </span>
   </div>
 </div>
@@ -32,7 +61,7 @@
     >
       <thead class="text-xs bg-black text-gray-300">
         <tr>
-          <th scope="col" class="px-3 py-3 uppercase" style="width: 100px;">
+          <th scope="col" class="px-2 py-2 uppercase" style="width: 60px;">
             <template x-if="input.reverse">
               <button
                 class="text-white"
@@ -48,14 +77,11 @@
             No.
           </th>
 
-          <th scope="col" class="px-3 py-3 uppercase" style="width: 100px;"
+          <th scope="col" class="px-2 py-2 uppercase" style="width: 80px;"
             >Level</th
           >
-          <th scope="col" class="px-3 py-3 uppercase" style="width: 120px;"
+          <th scope="col" class="px-2 py-2 uppercase" style="width: 80px;"
             >Device</th
-          >
-          <th scope="col" class="px-3 py-3 uppercase" style="width: 100px;"
-            >Time</th
           >
           <th scope="col" class="px-3 py-3">
             <template x-if="results.result.type == 'file'">
@@ -81,9 +107,9 @@
             class="border-b border-gray-800 bg-gray-900 hover:bg-gray-800 transition-colors duration-150"
             :class="{'highlight': input.realtime == true && highlighter.line_from > 0 && item.line_number-1 >= highlighter.line_from}"
           >
-            <td class="px-3 py-2" x-text="item.line_number.toLocaleString()"
+            <td class="px-2 py-1" x-text="item.line_number.toLocaleString()"
             ></td>
-            <td class="px-3 py-2">
+            <td class="px-2 py-1">
               <template x-if="item.level == 'success'">
                 <span
                   class="text-xs font-medium me-2 px-2.5 py-0.5 rounded bg-green-900 text-green-300"
@@ -127,7 +153,7 @@
                 >
               </template>
             </td>
-            <td class="px-3 py-2 text-gray-400 text-xs">
+            <td class="px-2 py-1 text-gray-400 text-xs">
               <template x-if="item.agent.device === 'server'">
                 <svg
                   class="w-4 h-4 text-gray-400 inline"
@@ -203,8 +229,11 @@
               </template>
               <span class="uppercase" x-text="item.agent.device"></span>
             </td>
-            <td><span class="text-sm" x-text="timeago(item.date)"></span></td>
-            <td class="px-3 py-2 text-blue-300 whitespace-pre-wrap" x-text="formatLogString(item.content)"></td>
+
+            <td class="px-1 py-1 text-blue-200 whitespace-pre-wrap bg-gray-800">
+                <span class="text-blue-400" x-text="timeago(item.date)"></span>
+                <span x-text="formatLogString(item.content)"></span>
+            </td>
           </tr>
         </template>
       </tbody>
@@ -212,37 +241,6 @@
   </div>
 </div>
 
-<div class="max-w-3xl mx-auto text-center">
-  <nav aria-label="Page navigation example" class="mt-5">
-    <ul class="inline-flex -space-x-px text-sm">
-      <li>
-        <button
-          :disabled="input.page === 1"
-          @click="input.page > 1 ? input.page-- : null; submit();"
-          class="flex items-center justify-center px-3 h-8 ms-0 leading-tight border-e-0 rounded-s-lg bg-gray-800 border-gray-700 text-gray-300 hover:bg-gray-700 hover:text-white transition-colors duration-150"
-          :class="{'cursor-not-allowed opacity-50': input.page === 1}"
-          >Previous</button
-        >
-      </li>
-      <li>&nbsp;</li>
-      <li>
-        <button
-          type="button"
-          :disabled="input.page >= Math.ceil(results.result.total / input.per_page)"
-          @click="input.page++; submit();"
-          class="flex items-center justify-center px-3 h-8 leading-tight rounded-e-lg bg-gray-800 border-gray-700 text-gray-300 hover:bg-gray-700 hover:text-white transition-colors duration-150"
-          :class="{'cursor-not-allowed opacity-50': input.page >= Math.ceil(results.result.total / input.per_page)}"
-          >Next</button
-        >
-      </li>
-    </ul>
-  </nav>
-  <div class="pt-3 text-sm text-gray-400">
-    Page <span x-text="input.page.toLocaleString()"></span> of <span
-      x-text="Math.ceil(results.result.total / input.per_page).toLocaleString()"
-    ></span> (<span x-text="results.result.total.toLocaleString()"></span> rows)
-  </div>
-</div>
 <style>
   @keyframes highlight {
     from {
